added Mac method to populate tables